template en bootstrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -264,11 +264,11 @@
 		text-shadow: -1px -1px 0.5px rgba(0,0,0,0.5);
 		overflow: hidden;
 		background: #ea8a95;
-		background-image: -moz-linear-gradient(top, rgba(97,184,219,0), rgba(250,150,150,1));
-		background-image: -webkit-linear-gradient(top, rgba(97,184,219,0), rgba(250,150,150,1));
-		background-image: -o-linear-gradient(top, rgba(97,184,219,0), rgba(250,150,150,1));
-		background-image: -ms-linear-gradient(top, rgba(97,184,219,0), rgba(250,150,150,1));
-		background-image: linear-gradient(top, rgba(97,184,219,0), rgba(250,150,150,1));
+		background-image: -moz-linear-gradient(top, rgba(219, 97, 184,0), rgba(250,150,150,1));
+		background-image: -webkit-linear-gradient(top, rgba(219, 97, 184,0), rgba(250,150,150,1));
+		background-image: -o-linear-gradient(top, rgba(219, 97, 184,0), rgba(250,150,150,1));
+		background-image: -ms-linear-gradient(top, rgba(219, 97, 184,0), rgba(250,150,150,1));
+		background-image: linear-gradient(top, rgba(219, 97, 184,0), rgba(250,150,150,1));
 		box-shadow: inset 0px 0px 0px 1px #fcb2ff, inset 0px 2px 1px 0px rgba(255,255,255,0.75);
 		-moz-transition: background-color .2s ease-in-out;
 		-webkit-transition: background-color .2s ease-in-out;
